--- a/my-fit-example/fit-repo/fit-dashboard/package.json
+++ b/my-fit-example/fit-repo/fit-dashboard/package.json
@@ -8,43 +8,35 @@
     "@devexpress/dx-react-grid": "1.0.0-beta.3",
     "@devexpress/dx-react-grid-material-ui": "1.0.0-beta.3",
     "core-js": "^2.5.3",
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.14.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-filenames": "^1.2.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jest": "^21.5.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.5.1",
-    "jest": "^22.0.4",
-    "react": "^16.2.0",
-    "react-bootstrap": "^0.31.5",
-    "react-moment": "^0.7.0",
-    "momentjs": "^1.0.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
     "moment": "^2.20.1",
     "moment-timezone": "^0.5.14",
+    "momentjs": "^1.0.0",
+    "react": "^16.2.0",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
+    "react-moment": "^0.7.0",
     "react-test-renderer": "^16.2.0",
     "rollup": "0.50.0",
     "rollup-plugin-babel": "^3.0.3",
-    "rollup-plugin-license": "^0.5.0",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "webpack": "^3.10.0"
+    "rollup-plugin-license": "^0.8.1",
+    "rollup-plugin-node-resolve": "^3.0.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.3.4",
+    "@devexpress/dx-grid-core": "1.0.0-beta.3",
+    "@material-ui/core": "^3.9.2",
+    "classnames": "^2.2.5",
     "material-ui": "^1.0.0-beta.27",
     "material-ui-icons": "^1.0.0-beta.17",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
-    "prop-types": "^15.6.0",
-    "classnames": "^2.2.5",
     "react-modal": "^3.1.7",
+    "react-router-dom": "^4.2.2",
     "react-s-alert": "^1.3.2",
-    "@devexpress/dx-grid-core": "1.0.0-beta.3"
+    "react-scripts": "^2.1.8"
   },
   "peerDependencies": {
     "react": "^16.2.0",
@@ -61,5 +53,11 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://ec2-34-229-91-174.compute-1.amazonaws.com:3000"
+  "proxy": "http://ec2-34-229-91-174.compute-1.amazonaws.com:3000",
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
